fix cache config and remove unused log